clusters/mlops/apps/loadtester/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadtester
  namespace: loadtester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadtester
  template:
    metadata:
      labels:
        app: loadtester
    spec:
      containers:
      - name: loadtester
        image: ghcr.io/mirceanton/loadtester
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
