clusters/mlops/apps/loadtester/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loadtester
  namespace: loadtester
spec:
  ingressClassName: nginx
  rules:
  - host: loadtester.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loadtester
            port:
              number: 80
